--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,44 @@
             "PackageFactory\\NodeTypeObjects\\": "Classes/"
         }
     },
+    "require-dev": {
+        "phpunit/phpunit": "^10.0",
+        "phpstan/phpstan": "^1.10",
+        "squizlabs/php_codesniffer": "^3.7"
+    },
+    "scripts": {
+        "fix:code-style": [
+            "phpcbf --extensions=php --colors --standard=PSR12 ./Classes",
+            "phpcbf --extensions=php --colors --standard=PSR12 ./Tests"
+        ],
+        "fix": [
+            "@install",
+            "@fix:code-style"
+        ],
+        "lint:code-style": [
+            "phpcs --extensions=php --colors --standard=PSR12 --exclude=Generic.Files.LineLength ./Classes",
+            "phpcs --extensions=php --colors --standard=PSR12 --exclude=Generic.Files.LineLength ./Tests"
+        ],
+        "lint:static-analysis": "phpstan analyse",
+        "lint": [
+            "@install",
+            "@lint:code-style",
+            "@lint:static-analysis"
+        ],
+        "test:unit": "vendor/bin/phpunit Tests/Unit",
+        "test": [
+            "@install",
+            "@test:unit"
+        ]
+    },
     "extra": {
         "neos": {
             "package-key": "PackageFactory.NodeTypeObjects"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "neos/composer-plugin": true
         }
     }
 }
