TASK: Build neos-9 branch aswell

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,11 @@ on:
   push:
       branches:
         - 'main'
+        - 'neos-9'
   pull_request:
       branches:
         - 'main'
+        - 'neos-9'
 
 jobs:
     test:
