--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
             fail-fast: false
             matrix:
                 php-versions: ["8.2", "8.3"]
-                neos-versions: ["9.0"]
+                neos-versions: ["9.0.x-dev"]
 
         runs-on: ubuntu-latest
 
