--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
             fail-fast: false
             matrix:
                 php-versions: ["8.2", "8.3"]
-                neos-versions: ["9.0"]
+                neos-versions: ["9.0.0-beta18"]
 
         runs-on: ubuntu-latest
 
@@ -36,7 +36,9 @@ jobs:
                   ini-values: date.timezone="Africa/Tunis", opcache.fast_shutdown=0, apc.enable_cli=on
 
             - name: Set Neos Version
-              run: composer require neos/neos ^${{ matrix.neos-versions }} --no-progress --no-interaction
+              run: >
+                composer config minimum-stability beta &&
+                composer require neos/neos ^${{ matrix.neos-versions }} --no-progress --no-interaction
 
             - name: Run Linter
               run: composer lint
